--- a/HackerRank/HackerRank.csproj
+++ b/HackerRank/HackerRank.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="coveralls.io" Version="1.4.2" />
+  </ItemGroup>
+
 </Project>
